# cmake-examples

./: README.md
class-1/: CMakeLists.txt  README.md  main.cpp
class-2/: CMakeLists.txt  Readme.md
class-3/: CMakeLists.txt  Readme.md  main.cpp
class-3/common/: CMakeLists.txt  MyLogger.cpp  MyLogger.h
class-4/: CMakeLists.txt  Readme.md
class-4/qml-example/: CMakeLists.txt  main.cpp  main.qml
class-4/qt-gui-example/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  main.cpp
class-5/: Readme.md
class-6/: CMakeLists.txt  Readme.md  main.cpp
class-6/file-manager/: CMakeLists.txt  File.cpp  File.h
